--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,12 @@
 Package: fast
 Type: Package
 Title: Implementation of the Fourier Amplitute Sensitivity Test (FAST)
-Version: 0.51
-Date: 2008-11-26
+Version: 0.60
+Date: 2011-12-27
 Author: Dominik Reusser
-Maintainer: Dominik Reusser <dreusser@uni-potsdam.de>
-Description: The Fourier Amplitute Sensitivity Test (FAST) is a method
-        to deterimine global sensitivities of a model on parameter
-        changes with relavtively few model runs. This package
-        implements this sensitivity analysis method.
+Maintainer: Dominik Reusser <reusser@pik-potsdam.de>
+Description: The Fourier Amplitute Sensitivity Test (FAST) is a method to deterimine global sensitivities of a model on parameter changes with relavtively few model runs. This package implements this sensitivity analysis method.
 License: GPL-2
-Packaged: Thu Mar 26 18:57:23 2009; dreusser
+Packaged: 2011-12-28 13:59:56 UTC; reusser
 Repository: CRAN
-Date/Publication: 2009-03-27 08:10:42
+Date/Publication: 2011-12-30 11:22:49
