--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: fast
 Type: Package
-Title: Implementation of the Fourier Amplitute Sensitivity Test (FAST)
-Version: 0.60
-Date: 2011-12-27
+Title: Implementation of the Fourier Amplitude Sensitivity Test (FAST)
+Version: 0.61
+Date: 2012-07-31
 Author: Dominik Reusser
 Maintainer: Dominik Reusser <reusser@pik-potsdam.de>
-Description: The Fourier Amplitute Sensitivity Test (FAST) is a method to deterimine global sensitivities of a model on parameter changes with relavtively few model runs. This package implements this sensitivity analysis method.
+Description: The Fourier Amplitude Sensitivity Test (FAST) is a method
+        to determine global sensitivities of a model on parameter
+        changes with relatively few model runs. This package implements
+        this sensitivity analysis method.
 License: GPL-2
-Packaged: 2011-12-28 13:59:56 UTC; reusser
+Packaged: 2012-07-31 12:51:59 UTC; reusser
 Repository: CRAN
-Date/Publication: 2011-12-30 11:22:49
+Date/Publication: 2012-07-31 16:06:37
